<resources>
    <string name="app_name">Craft It</string>
    <string name="back">back</string>
    <string name="desc_user_profile_photo">user profile photo</string>
    <string name="email_not_registered">Email not found. Please check your email or register a new account.</string>
    <string name="err_email_already_registered">This email is already registered. Please use another email or log in.</string>
    <string name="error_email_empty">Email cannot be empty. Please enter your email address.</string>
    <string name="error_password_empty">Password cannot be empty. Please enter your password.</string>
    <string name="fill_all_fields">Failed to login. Please fill in all required fields.</string>
    <string name="gallery">gallery</string>
    <string name="have_account">Already have an account? Log in here.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="help_option">option</string>
    <string name="help_search_with_image">search with image</string>
    <string name="help_user_photo">user photo</string>
    <string name="hint_search">search</string>
    <string name="image_of_post">image of post</string>
    <string name="invalid_password">Invalid password. Please check and try again.</string>
    <string name="like">like</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="not_a_password">Your password should be longer for better security.</string>
    <string name="not_an_email">The email address you entered is invalid.</string>
    <string name="not_empty">This field cannot be empty. Please fill it in.</string>
    <string name="nothing_here">Ups, nothing here</string>
    <string name="please_wait">Please wait while we process your request…</string>
    <string name="register_failed">Registration failed. Please try again.</string>
    <string name="register_success">Yay!! Let\'s create some handcrafts together!</string>
    <string name="reload">Reload</string>
    <string name="something_went_wrong">Ups!, look like something bad happened</string>
    <string name="step">step</string>
    <string name="text_days_ago">days ago</string>
    <string name="text_email">Email</string>
    <string name="text_for_you">For you</string>
    <string name="text_home_subgreeting">Let’s recycle for good of nature</string>
    <string name="text_hours_ago">hour ago</string>
    <string name="text_lets_continue">Let\'s continue!</string>
    <string name="text_login">Login</string>
    <string name="text_minutes_ago">minute ago</string>
    <string name="text_more">More</string>
    <string name="text_password">password</string>
    <string name="text_register">Register</string>
    <string name="text_seconds_ago">second ago</string>
    <string name="text_username">Username</string>
    <string name="text_welcome">Hi, %s</string>
    <string name="text_welcome_desc">Discover the fun in recycling through creative crafting with our community app. Explore endless crafting ideas that transform everyday waste into beautiful and useful items. Join a community of eco-conscious crafters, share your projects, and get inspired by others.</string>
    <string name="text_welcome_title">Turn Your Waste Into Something Beautiful!. Let’s Recycle for Sustainable Future</string>
    <string name="timeout_error">Request timed out. Please check your internet connection and try again.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_discovery">Discovery</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="someone_else_login">Look like someone is login to your account, try login again.</string>
    <string name="permission_denied">Permission denied</string>
    <string name="ok">ok</string>
    <string name="permission_denied_message">You need to allow the permission to access the camera, please try again.</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="retry">retry</string>
    <string name="help_craftit_logo">Craftit logo</string>
    <string name="update_profile_picture_header">Pick a profile picture</string>
    <string name="update_profile_picture_subheader">Have favorite selfie?, upload it now.</string>
    <string name="upload_image">upload_image</string>
    <string name="skip_for_now">Skip for now</string>
    <string name="error_failed_upload_profile_picture">Failed to upload your profile picture, try again.</string>
    <string name="upload">Upload</string>
    <string name="please_select_an_image_first">Please select an image first</string>
    <string name="invalid_file_type">Ups thats not supported</string>
    <string name="error_failed_crop_image">failed to crop image</string>
    <string name="category">Category</string>
    <string name="recently_added">Recently Added</string>
    <string name="trending">Trending</string>
    <string name="craft_image">craft image</string>
    <string name="start_crafting">Start Crafting</string>
    <string name="instructable_search_string">https://www.instructables.com/search/?q=</string>
    <string name="copyright_cc_nc_sa_instructable">Copyright: CC-NC-SA - Instructable</string>
    <string name="next">Next</string>
    <string name="data_not_found">Ups something went wrong, try another recipes</string>
    <string name="back_to_detail">Back to detail</string>
    <string name="finish_header">You have made it, by recycling the waste you have saved the environment.</string>
    <string name="congratulations">Congratulations!</string>
    <string name="bookmark">Bookmark</string>
</resources>