<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/base"
    android:fitsSystemWindows="true"
    tools:context=".ui.update_picture.UpdatePictureActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/help_craftit_logo"
            android:src="@mipmap/ic_launcher_foreground"

            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_profile_picture_header"
            android:textAlignment="center"
            android:textColor="@color/onBase"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/app_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/update_profile_picture_subheader"
            android:textAlignment="center"
            android:textColor="@color/onBase400"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/headline" />

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/iv_image"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:src="@drawable/portrait_placeholder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:riv_corner_radius="1000dp" />

        <ImageButton
            android:id="@+id/btn_select_image"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:layout_margin="8dp"
            android:background="@drawable/full_rounded_background"
            android:backgroundTint="@color/base"
            android:contentDescription="@string/upload_image"
            android:elevation="4dp"
            android:src="@drawable/ic_add"
            app:layout_constraintBottom_toBottomOf="@id/iv_image"
            app:layout_constraintRight_toRightOf="@id/iv_image"
            app:tint="@color/primary" />

        <Button
            android:id="@+id/btn_upload"
            style="@style/Theme.CraftIt.Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/primary100"
            android:text="@string/upload"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintBottom_toTopOf="@+id/btn_skip"
            app:layout_constraintLeft_toLeftOf="parent" />

        <Button
            android:id="@+id/btn_skip"
            style="@style/Theme.CraftIt.Button.Secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/skip_for_now"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/loading"
        layout="@layout/loading_components"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>
