<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/base"
    android:fitsSystemWindows="true"
    tools:context=".ui.search.SearchActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/base"
        android:paddingVertical="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:contentInsetStart="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp">

            <ImageButton
                android:id="@+id/backButton"
                style="@style/Theme.CraftIt.Button.Small"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:contentDescription="@string/back"
                android:src="@drawable/ic_back" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/searchEditText"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:autofillHints="unset"
                android:background="@drawable/full_rounded_background"
                android:backgroundTint="@color/base600"
                android:hint="@string/hint_search"
                android:inputType="text"
                android:paddingHorizontal="16dp"
                android:textSize="16sp" />

            <ImageButton
                android:id="@+id/microphoneButton"
                style="@style/Theme.CraftIt.Button.Small"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:contentDescription="@string/help_search_with_image"
                android:src="@drawable/ic_camera" />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>


    <com.sevenexp.craftit.widget.CustomRecyclerView
        android:id="@+id/rv_search_result"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
